fix modal z-index
when modal open menu link unreachable

--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -360,6 +360,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  z-index: 101;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.2);
